Anadida autentificacion cuando vas a hacer cualquier POST, VOTE o PUT de perfil
