# app/controllers/concerns/authenticable.rb
@@ -1,9 +1,9 @@
 module Authenticable
 
   # Devise methods overwrites
-  def current_user
-    @current_user ||= User.find_by(auth_token: request.headers['Authorization'])
-  end
+  #def current_user
+  #  @current_user ||= User.find_by(auth_token: request.headers['Authorization'])
+  #end
 
   def authenticate_with_token!
     render json: { errors: "Not authenticated" },
@@ -11,7 +11,9 @@ module Authenticable
   end
 
   def user_signed_in?
-    current_user.present?
+    #current_user.present?
+    @current_user ||= User.find_by(auth_token: request.headers['Authorization'])
+    @current_user.present?
   end
 
 end
